[feat]:eventmenu 설정/event 개별조회 구현 완료