@@ -7,6 +7,7 @@ import backend.stamp.coupon.repository.CouponRepository;
 import backend.stamp.global.exception.ApplicationException;
 import backend.stamp.global.exception.ErrorCode;
 import backend.stamp.stamp.dto.MyStampResponseDto;
+import backend.stamp.stamp.dto.StampHistoryListResponseDto;
 import backend.stamp.stamp.dto.StampHistoryResponseDto;
 import backend.stamp.stamp.entity.Stamp;
 import backend.stamp.stamp.repository.StampRepository;
@@ -29,7 +30,7 @@ public class StampDetailService {
     //내가 현재 가진 스탬프 히스토리 조회 ( 과거 )
 
     @Transactional(readOnly = true)
-    public List<StampHistoryResponseDto> getStampHistory(Account account) {
+    public StampHistoryListResponseDto getStampHistory(Account account) {
 
         //유저 계정 null 체크
         if (account == null) {
@@ -48,10 +49,15 @@ public class StampDetailService {
             coupons = List.of(); // null이면 빈 리스트로 처리
         }
 
-        // DTO 변환
-        return coupons.stream()
+        List<StampHistoryResponseDto> stampList = coupons.stream()
                 .map(StampHistoryResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        // DTO 변환
+        return StampHistoryListResponseDto.builder()
+                .completedStampNum(stampList.size())
+                .completedStamps(stampList)
+                .build();
     }
 
     // 내가 현재 가진 스탬프 리스트 조회
